# REB-denoising

./: README.md  pyproject.toml  requirements.txt
examples/: circle_denoising.py  sphere_denoising.py
examples/real_data/: astro.py  chemi.py
examples/real_data/data/: 1ADO.pdb1  1ENO.pdb1  6X8J.pdb1
reb/: __init__.py  crossvalidation.py  denoiser.py  density_estimation.py  helpers.py  oracle.py  priors.py
reb/plotting/: S1.py  S2.py  T2.py  __init__.py
src/: appl_astro.ipynb  replicate_results.txt
src/cluster/: run_python.run  script_rate.py
src/cluster/params/: params.py
src/examples/: S1.ipynb  S1_all.py  S2.ipynb  S2_all.py
src/examples/local_experiments/: naive.ipynb  oracle.ipynb
src/real_data/: astro.py  chemi.py
src/simulations/: display_rates.ipynb  display_rates.py  fields.ipynb
src/simulations/data/S1/1774870186.5090587/: rate_mc.csv  rate_ocv.csv  rate_params.pkl
src/simulations/data/S2/1774868862.0721881/: rate_mc.csv  rate_ocv.csv  rate_params.pkl
src/utils/: __init__.py  crossvalidation.py  denoiser.py  density_estimation.py  display_rates.py  helpers.py  oracle.py  priors.py
src/utils/plotting/: S1.py  S2.py  T2.py  __init__.py
